--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -97,7 +97,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: monospace
+    # family: monospace
+    family: InputMono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -108,7 +109,8 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
+    # family: monospace
+    family: InputMono
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -119,7 +121,8 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
+    # family: monospace
+    family: InputMono
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -130,7 +133,8 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
+    # family: monospace
+    family: InputMono
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
@@ -141,7 +145,7 @@ font:
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
   offset:
-    x: 1  
+    x: 1
     y: 2
 
   # Glyph offset determines the locations of the glyphs within their cells with
