Updated Spicetify I guess

--- a/.config/spicetify/config.ini
+++ b/.config/spicetify/config.ini
@@ -18,16 +18,17 @@ lyric_always_show            = 0
 radio                        = 0
 
 [Setting]
-prefs_path           = /home/night/.config/spotify/prefs
-current_theme        = Dribbblish
-color_scheme         = Dracula
-inject_css           = 1
-replace_colors       = 1
-overwrite_assets     = 1
-spotify_launch_flags = 
-spotify_path         = /opt/spotify
+prefs_path              = /home/night/.config/spotify/prefs
+current_theme           = Dribbblish
+color_scheme            = Dracula
+inject_css              = 1
+replace_colors          = 1
+overwrite_assets        = 1
+spotify_launch_flags    = 
+spotify_path            = /opt/spotify
+check_spicetify_upgrade = 0
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.1.10.546.ge08ef575
+version = 1.1.42.622.gbd112320
 
