--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -4,10 +4,17 @@
 temp-day=5000
 temp-night=1800
 
-; Enable/Disable a smooth transition between day and night
-; 0 will cause a direct change from day to night screen temperature.
-; 1 will gradually increase or decrease the screen temperature.
-transition=1
+; Disable the smooth fade between temperatures when Redshift starts and stops.
+; 0 will cause an immediate change between screen temperatures.
+; 1 will gradually apply the new screen temperature over a couple of seconds.
+fade=1
+
+; Custom dawn/dusk intervals.
+; Instead of using the solar elevation, the time intervals of dawn and dusk
+; can be specified manually. The times must be specified as HH:MM in 24-hour
+; format.
+dawn-time=7:00-11:00
+dusk-time=16:35-18:15
 
 ; Set the screen brightness. Default is 1.0.
 ;brightness=0.9
@@ -27,13 +34,14 @@ brightness-night=0.7
 ; Set the location-provider: 'geoclue', 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
 ; The location provider settings are in a different section.
-location-provider=manual
+;location-provider=manual
 
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
-[manual]
-lat=56
-lon=32
+;[manual]
+;lat=56
+;lon=32
+;^ These are arbitrarily set so ur not gonna have success coming after me lol.  I used to set them before the redshift update in a place where I could get proper lighting cos it wasn't good at the acual position, but this is fixed now with dawn-time and dusk-time!
 
 ; Set the adjustment-method: 'randr', 'vidmode'
 ; type 'redshift -m list' to see all possible values.
