Regular brightness lowered due to winter

--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -1,7 +1,7 @@
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
-temp-day=5000
+temp-day=4000
 temp-night=1800
 
 ; Disable the smooth fade between temperatures when Redshift starts and stops.
@@ -20,7 +20,7 @@ dusk-time=16:35-18:15
 ;brightness=0.9
 ; It is also possible to use different settings for day and night
 ; since version 1.8.
-;brightness-day=0.7
+brightness-day=0.8
 brightness-night=0.7
 ; Set the screen gamma (for all colors, or each color channel
 ; individually)
