ZSH theme was hardcoded to my name lol oops

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "/home/night/.config/ohmyzsh/custom/themes/minimal_improved"]
-	path = /home/night/.config/ohmyzsh/custom/themes/minimal_improved
+	path = .config/ohmyzsh/custom/themes/minimal_improved
 	url = https://github.com/gdsrosa/minimal_improved.git
 [submodule ".config/dwm"]
 	path = .config/dwm
