Fixed up NumpadAdd in Alacritty config

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -511,7 +511,7 @@ key_bindings:
   #- { key: Insert,         mods: Shift,          action: PasteSelection   }
   #- { key: Key0,           mods: Control,        action: ResetFontSize    }
   - { key: Equals,          mods: Control,        action: IncreaseFontSize }
-  #- { key: Add,            mods: Control,        action: IncreaseFontSize }
+  #- { key: NumpadAdd,            mods: Control,        action: IncreaseFontSize }
   - { key: NumpadSubtract,  mods: Control,        action: DecreaseFontSize }
   #- { key: Minus,          mods: Control,        action: DecreaseFontSize }
   - { key: Return,          mods: Control|Shift,  action: SpawnNewInstance }
