--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -1,8 +1,8 @@
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
-temp-day=4000
-temp-night=1800
+temp-day=5000
+temp-night=3200
 
 ; Disable the smooth fade between temperatures when Redshift starts and stops.
 ; 0 will cause an immediate change between screen temperatures.
@@ -48,4 +48,4 @@ brightness-night=0.7
 ; 'randr' is the preferred method, 'vidmode' is an older API.
 ; but works in some cases when 'randr' does not.
 ; The adjustment method settings are in a different section.
-; adjustment-method=randr
+adjustment-method=randr
